<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="picker_sure">Sure</string>
    <string name="picker_cancel">Cancel</string>
    <string name="picker_title">TimePicker</string>

    <string name="picker_year">Year</string>
    <string name="picker_month">Month</string>
    <string name="picker_day">Day</string>
    <string name="picker_hour">Hour</string>
    <string name="picker_minute">Minute</string>

    <string name="has_chose">已选择</string>
    <string name="picture_unit">张</string>
    <string name="please_choose_pic">选择图片</string>
    <string name="arrive_limit_count">已达到最大选择数</string>
    <integer name="version_code">1</integer>

    <string name="version_name">v1.0.0</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">锐赛克</string>
    <string name="dir">/jyds</string>
    <string name="log_dir">/jylog</string>
    <string name="db_dir">/database</string>
    <string name="img_dir">/img</string>
    <string name="app_dir">/app</string>
    <string name="dump_dir">/dump</string>
    <string name="temp_dir">/temp</string>
    <string name="proJgfa">请选择价格方案</string>
    <string name="proLjz">请选择零件分组</string>
    <string name="proSeri">选择车组</string>
    <string name="proVehi">请选择车型</string>
    <string name="proPart">请选择零件组</string>
    <string name="proXlc">请选择修理厂类型</string>
    <string name="proPzbw">请选择碰撞程度</string>
    <string name="proPzcd">请选择碰撞部位</string>
    <string name="proRepair">请选择工时项目</string>
    <string name="no_picture">无图</string>
    <string name="copyright">版权所有 @北京精友世纪软件技术有限公司</string>
    <string name="password">密\t码 </string>
    <string name="login">登 陆</string>
    <string name="cancel">取 消</string>
    <string name="confirm">确定</string>
    <string name="prompt">提示</string>
    <string name="checkSdCard">请检查内存卡！</string>
    <string name="usernamehint">请输入登录名</string>
    <string name="passwordhint">请输入登录密码</string>
    <string name="remPassword">记住我的登录信息</string>
    <string name="getTask">正在获取查勘任务中。。。</string>
    <string name="username">用户名</string>

    <!-- 主菜单内容 -->
    <string name="back">返回</string>
    <string name="surveytext">案件中心</string>
    <string name="evaltext">定损</string>
    <string name="searchtext">相关查询</string>
    <string name="updatetext">版本升级</string>
    <string name="claimsearchtext">案件查询</string>
    <string name="partsearchtext">配件查询</string>
    <string name="reportNo">报案号:</string>
    <string name="task_type_all_task">全部任务</string>
    <string name="claimhall">报案大厅</string>
    <string name="menu">功能菜单</string>
    <string name="claiminfo">报案信息</string>
    <string name="policyinfo">抄单信息</string>
    <string name="protone">国产品牌</string>
    <string name="brands">进口品牌</string>
    <string name="user_defined">自定义</string>

    <string-array name="arrTaskMenu">
        <item>手动接收</item>
        <item>待接受</item>
        <item>已接收待处理</item>
        <item>处理中</item>
        <item>案件查询</item>
        <item>配件查询</item>
        <item>版本升级</item>
    </string-array>
    <string-array name="arrTaskMenuDetail">
        <item>点击手动接收后,可及时接收最新调度的案件</item>
        <item>待接受案件，可进行接收，暂缓或申请改派</item>
        <item>已接收并未做任何处理，处于等待处理的案件</item>
        <item>已处理但未处理完成，需继续处理的案件</item>
        <item>只对已完成的案件查询，可查询本地或远程案件</item>
        <item>车型配件信息查询</item>
        <item>点击后，可连接到服务期升级到最新的版本</item>
    </string-array>
    <string-array name="gcBrandName">
        <item>江淮</item>
        <item>大迪</item>
        <item>北京吉普</item>
        <item>北京克莱斯勒</item>
        <item>北京奔驰</item>
        <item>北京三菱</item>
        <item>北京现代</item>
        <item>比亚迪</item>
        <item>长安</item>
        <item>长城</item>
        <item>东风风行</item>
        <item>东风悦达起亚</item>
        <item>东南</item>
        <item>东南三菱</item>
        <item>广汽本田</item>
        <item>哈飞</item>
        <item>双环红星</item>
        <item>长丰</item>
        <item>江南</item>
        <item>华晨宝马</item>
        <item>昌河铃木</item>
        <item>昌河</item>
        <item>开瑞</item>
        <item>奇瑞</item>
        <item>瑞麒</item>
        <item>华泰现代</item>
        <item>上海大众</item>
        <item>上海大众斯柯达</item>
        <item>华普</item>
        <item>上海通用别克</item>
        <item>上海通用凯迪拉克</item>
        <item>上海通用雪佛兰</item>
        <item>上汽通用五菱</item>
        <item>上汽通用五菱雪佛兰</item>
        <item>东风标致</item>
        <item>东风雪铁龙</item>
        <item>金杯</item>
        <item>华晨中华</item>
        <item>双环</item>
        <item>天津一汽丰田</item>
        <item>天津一汽</item>
        <item>夏利</item>
        <item>一汽奥迪</item>
        <item>一汽大众</item>
        <item>海马</item>
        <item>海南马自达</item>
        <item>一汽吉林</item>
        <item>解放(一汽吉林)</item>
        <item>南京菲亚特</item>
        <item>MG名爵</item>
        <item>南汽新雅途</item>
        <item>吉利帝豪</item>
        <item>吉利</item>
        <item>郑州日产</item>
        <item>长安铃木</item>
        <item>东风日产</item>
        <item>东风</item>
        <item>东风风神</item>
        <item>四川一汽丰田</item>
        <item>力帆(乘用车)</item>
        <item>飞碟</item>
        <item>广汽丰田</item>
        <item>一汽红旗</item>
        <item>一汽马自达</item>
        <item>长安福特</item>
        <item>长安马自达</item>
        <item>长安沃尔沃</item>
        <item>东风本田</item>
        <item>富迪</item>
        <item>荣威</item>
        <item>陆风</item>
        <item>众泰</item>
        <item>青年莲花</item>
        <item>一汽奔腾</item>
    </string-array>
    <string-array name="jkBrandName">
        <item>标致</item>
        <item>雪铁龙</item>
        <item>欧宝</item>
        <item>奥迪</item>
        <item>宝马</item>
        <item>迷你</item>
        <item>保时捷</item>
        <item>大众</item>
        <item>梅赛德斯-奔驰</item>
        <item>雷诺</item>
        <item>起亚</item>
        <item>双龙</item>
        <item>现代</item>
        <item>斯柯达</item>
        <item>吉普</item>
        <item>福特</item>
        <item>悍马</item>
        <item>凯迪拉克</item>
        <item>讴歌</item>
        <item>本田</item>
        <item>丰田</item>
        <item>雷克萨斯</item>
        <item>斯巴鲁</item>
        <item>铃木</item>
        <item>马自达</item>
        <item>日产</item>
        <item>英菲尼迪</item>
        <item>萨博</item>
        <item>沃尔沃</item>
        <item>菲亚特</item>
        <item>捷豹</item>
        <item>路虎</item>
    </string-array>

    <string name="select_notice">请选择</string>

    <string-array name="loss_type">
        <item>车损</item>
        <item>物损</item>
        <item>人伤</item>
        <item>盗抢</item>
        <item>无</item>
    </string-array>
    <string-array name="repair_type">
        <item>是</item>
        <item>否</item>
    </string-array>

    <string name="pause_warn">        暂存后，会将本地信息上传到服务端并删除本地任务，是否确认暂存？
</string>
    <string name="must_input">必填</string>
    <string name="vin_type">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOQPRSTUVWXYZ</string>
    <string name="progressbar">正在加载图片，请稍等...</string>
    <string name="ok">选择</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="title_activity_pick">PickActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="repair_flag">维修资质</string>
    <string name="repair_4s">4S店</string>
    <string name="repair_normal">普通修理厂</string>


</resources>