<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#20C6C6"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dip"
                android:scaleType="centerInside"
                android:src="@drawable/huishou" >
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="锐赛克"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Version"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/contraleditlay1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="15dip" >

                <LinearLayout
                    android:id="@+id/log_username_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dip"
                    android:background="@drawable/username" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/dit_username" />

                    <EditText
                        android:id="@+id/log_usernameEdit"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="8"
                        android:background="#00000000"
                        android:hint="@string/usernamehint"
                        android:imeOptions="normal"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/log_password_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/log_username_layout"
                    android:layout_below="@+id/log_username_layout"
                    android:layout_marginBottom="5dip"
                    android:background="@drawable/username" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/password" />

                    <EditText
                        android:id="@+id/log_passwordEdit"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="8"
                        android:background="#00000000"
                        android:hint="@string/passwordhint"
                        android:imeOptions="normal"
                        android:password="true"
                        android:singleLine="true" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/log_button_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignLeft="@+id/log_password_layout"
                    android:layout_alignRight="@+id/log_password_layout"
                    android:layout_below="@+id/log_password_layout"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/evalBtn"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_weight="3"
                        android:background="#80C2C2"
                        android:text="登     录"
                        android:textColor="@color/white"
                        android:textSize="18sp" >
                    </Button>

                    <Button
                        android:id="@+id/evalBtnx"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dip"
                        android:layout_weight="2.5"
                        android:focusable="true"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>